# m2

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  config.yml  rust-toolchain.yml
e2e-tests/: Karate.Dockerfile  Makefile  README.md  compose.yaml  e2e-config.yml
e2e-tests/src/: karate-config.js
e2e-tests/src/auth/: register.feature
migrations/: 00001_create_user_tables.sql  00002_create_auth_tables.sql
src/: db.rs  error.rs  lib.rs  main.rs  openapi.rs  router.rs  state.rs
src/auth/: argon2.rs  db.rs  logic.rs  mod.rs  model.rs  routes.rs
src/user/: db.rs  logic.rs  mod.rs  model.rs
